[gd_scene load_steps=4 format=3 uid="uid://dnismskxjehm6"]

[ext_resource type="Script" uid="uid://5e06aauin2d1" path="res://scripts/piece/piece.gd" id="1_huli3"]
[ext_resource type="Material" uid="uid://d1vk2u7swdqib" path="res://resources/pieces/piece_material.tres" id="3_ajk4a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_huli3"]
margin = 0.0
size = Vector3(2, 4.5, 2)

[node name="Piece" type="StaticBody3D"]
script = ExtResource("1_huli3")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.003, 0.677, 0.004)
shape = SubResource("BoxShape3D_huli3")

[node name="Piece_Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
material_override = ExtResource("3_ajk4a")
skeleton = NodePath("../..")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
